hphp/hack/test/typecheck/unsafe_cast/ignored/non_string_literal_ignored.php.legacy_decl.exp
File "non_string_literal_ignored.php", line 3, characters 10-10:
Invalid return type (Typing[4336])
  File "non_string_literal_ignored.php", line 3, characters 15-17:
  Expected `int`
  File "non_string_literal_ignored.php", line 3, characters 10-10:
  But got `void` because this function does not always return a value
File "non_string_literal_ignored.php", line 5, characters 3-44:
This cast violates type safety and may lead to unexpected behavior at runtime. (Typing[4417])
File "non_string_literal_ignored.php", line 5, characters 40-43:
Invalid argument (Typing[4110])
  File "soundness.hhi", line 8, characters 72-96:
  Expected `HH\FormatString<nothing>`
  File "non_string_literal_ignored.php", line 4, characters 10-16:
  But got `string`
File "non_string_literal_ignored.php", line 5, characters 40-43:
This argument must be a literal format string (Typing[4027])
